--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -68,3 +68,9 @@ footer:
 
 site-description:
     other: 法学法律工作者
+
+total_words:
+  other: "合计 {{ .Count }} 字"
+
+total_posts:
+  other: "全站共 {{ .Count }} 篇文章"
