--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -67,7 +67,7 @@ footer:
         other: 主题 {{ .Theme }} 由 {{ .DesignedBy }} 设计
 
 site-description:
-    other: 法学法律工作者
+    other: 基层法律工作者
 
 total_words:
   other: "合计约 {{ .Count }} 字"
