--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -25,7 +25,7 @@ article:
         other: 最后更新于
 
     readingTime:
-        other: "阅读时长: {{ .Count }} 分钟"
+        other: "{{ .Count }} 分钟"
 
 notFound:
     title:
