--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -67,7 +67,7 @@ footer:
         other: 主题 {{ .Theme }} 由 {{ .DesignedBy }} 设计
 
 site-description:
-    other: 法律人的数智生活
+    other: 法律、科技和生活
 
 
 total_words:
